Fix content overflow in branches sidebar

--- a/app/assets/stylesheets/dashboard/custom-style.scss
+++ b/app/assets/stylesheets/dashboard/custom-style.scss
@@ -203,7 +203,9 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 
+
 .branch {
+
   display: block;
   padding: 10px;
 
@@ -520,6 +522,10 @@
 }
 
 /* Bootstrap overrides */
+
+.btn-group-vertical {
+  width: 100%;
+}
 
 .modal-footer {
   input {
